--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 #meetzi_frame {
     width: 100%;
-    height: 95%;
-    position: fixed;
-    top: 50px;
+    height: 124%;
+    position: absolute;
+    top: -160px;
     right: 0;
 }
 
