--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-#meetzi_frame {
+.path-mod-meetzi #meetzi_frame {
     width: 100%;
     height: 124%;
     position: absolute;
@@ -6,7 +6,7 @@
     right: 0;
 }
 
-.roomwarning {
+.path-mod-meetzi .roomwarning {
     margin: 5px;
     font-size: large;
     font-weight: bold;
